pkg/lang/testdata/ub/inputs/invalid/default-kebab-name.ub
inputs: {
  mode: { type: optional(string, count-1) }
}
